<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="100"
        app:showAsAction="always">

        <menu>

            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/action_recent"
                    android:title="@string/recent"
                    android:orderInCategory="0" />

                <item
                    android:id="@+id/action_popular"
                    android:title="@string/popular"
                    android:orderInCategory="1"/>

            </group>

        </menu>

    </item>


</menu>